...

    var body: some View {
        NavigationStack {
            List {
                Section {
                    LabeledContent("Name", value: model.record.name)
                    LabeledContent("Pages", value: "\(model.pageCount)")
                    LabeledContent("Size", value: model.record.fileSize.fileSizeString)
                    LabeledContent("Created", value: model.record.createdAt.fullString)
                    LabeledContent("Modified", value: model.record.modifiedAt.fullString)
                }
                Section {
                    LabeledContent("Selectable text") {
...
